Fixes z-index Problem for River.svg

--- a/src/index.css
+++ b/src/index.css
@@ -63,10 +63,10 @@ body, html {
   background: linear-gradient(90deg, #06070c 0%, #323952 50%, #06070c 100%);
   width: 100vw;
   height: 100%;
-  perspective: 100px;
-  -webkit-perspective: 100px;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
+  perspective: 55px;
+  -webkit-perspective: 55px;
+  /* -webkit-transform-style: preserve-3d; */
+  /* transform-style: preserve-3d; */
 }
 
 
